[package]
name = "later_operator"
version = "0.1.1"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.60"
description = "Parsable, storable, printable comparison operators, w/ optional serde support."
license = "WTFPL"
repository = "https://github.com/Blobfolio/later_operator"
readme = "README.md"
keywords = [ "operator", "comparison", "relational" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "serde" ]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Later Operator"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[dev-dependencies]
serde_json = "1.0.*"

[dev-dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[dependencies]
trimothy = "0.1.*"

[dependencies.serde]
version = "1.0.*"
optional = true

[features]
default = []

# Enable (de)/serialization support.
serde = [ "dep:serde" ]
